[project]
name = "ib-flex-importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beancount>=3.1.0",
    "beangulp @ git+https://github.com/beancount/beangulp/@master",
    "ibflex>=0.15",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "uabean @ git+https://github.com/osadovy/uabean/@master",
]
