[project]
name = "alens-importers"
version = "0.1.0"
description = "Importers for Beancount's beangulp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beancount>=3.1.0",
    "beangulp @ git+https://github.com/beancount/beangulp/@master",
    "ibflex>=0.15",
    "loguru>=0.7.3",
    "requests>=2.32.3",
]

#[project.optional-dependencies]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.urls]
repository = "https://github.com/alensiljak/alens-importers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# include = ["alens_importers"]
packages = ["src/alens/"]

[tool.ruff]
